SNRGY-1276 add endpoint /tags
