# pkg/api/tags.go
@@ -1,0 +1,71 @@
+/*
+ *    Copyright 2021 InfAI (CC SES)
+ *
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
+ */
+
+package api
+
+import (
+	"encoding/json"
+	"fmt"
+	"github.com/SENERGY-Platform/influx-wrapper/pkg/configuration"
+	influxdb "github.com/SENERGY-Platform/influx-wrapper/pkg/influx"
+	"github.com/julienschmidt/httprouter"
+	"log"
+	"net/http"
+	"time"
+)
+
+func init() {
+	endpoints = append(endpoints, TagsEndpoint)
+}
+
+func TagsEndpoint(router *httprouter.Router, config configuration.Config, influx *influxdb.Influx) {
+	router.GET("/tags/:id", func(writer http.ResponseWriter, request *http.Request, params httprouter.Params) {
+		start := time.Now()
+		id := params.ByName("id")
+		db := request.Header.Get(userHeader)
+		if db == "" {
+			http.Error(writer, "Missing header "+userHeader, http.StatusBadRequest)
+			return
+		}
+
+		tagMap, err := influx.GetTags(db, id)
+
+		if err != nil {
+			switch err {
+			case influxdb.ErrInfluxConnection, influxdb.ErrNULL:
+				http.Error(writer, err.Error(), http.StatusBadGateway)
+				return
+			case influxdb.ErrNotFound:
+				http.Error(writer, err.Error(), http.StatusNotFound)
+				return
+			default:
+				http.Error(writer, err.Error(), http.StatusInternalServerError)
+				return
+			}
+		}
+
+		writer.Header().Set("Content-Type", "application/json")
+		err = json.NewEncoder(writer).Encode(tagMap)
+		if err != nil {
+			fmt.Println("ERROR: " + err.Error())
+		}
+
+		if config.Debug {
+			log.Println("Took " + time.Since(start).String())
+		}
+	})
+
+}
